# seestar-tool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install_pre_commit_rustfmt.sh
src/: apk.rs  apkpure.rs  app.rs  firmware.rs  gui.rs  main.rs  pem.rs  runner.rs  task.rs  tui.rs
